--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -1117,12 +1117,12 @@ div#clock div.space {
 
 }
 
-.lt-ie9 {
-	min-width: 1100px !important;
+.lt-ie9 body {
+	min-width: 1120px !important;
 }
 
 .lt-ie8 .t3, .lt-ie8 .t2, .lt-ie8 .t1 {
-	max-width: 275px !important;
+	max-width: 270px !important;
 }
 
 .lt-ie8 .t3 {
@@ -1139,9 +1139,9 @@ div#clock div.space {
 }
 
 .no-transition {
-	-webkit-transition: height 0;
-	-moz-transition: height 0;
-	-ms-transition: height 0;
-	-o-transition: height 0;
-	transition: height 0;
+	-webkit-transition: height 0 !important;
+	-moz-transition: height 0 !important;
+	-ms-transition: height 0 !important;
+	-o-transition: height 0 !important;
+	transition: height 0 !important;
 }
